# flask-markdown-converter

./: cline_task_feb-27-2025_8-24-55-pm.md  flask-webhook-spec.md  pyproject.toml
app/: config.py
app/api/: __init__.py  convert.py  routes.py
app/config/schemas/: calendar.json
app/middleware/: __init__.py  validation.py
app/models/: __init__.py
app/preprocessors/: calendar.py
app/templates/calendar/: compact.md.j2  standard.md.j2
app/utils/: __init__.py  logging.py  template.py
flask-markdown-converter/: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  uv_scripts.py  wsgi.py
flask-markdown-converter/app/: __init__.py
flask-markdown-converter/app/api/: routes.py
flask-markdown-converter/app/config/formats/: calendar.yaml
flask-markdown-converter/app/middleware/: auth.py
flask-markdown-converter/app/models/: request_models.py
flask-markdown-converter/app/preprocessors/: __init__.py  registry.py
flask-markdown-converter/app/utils/: date_utils.py  jinja_filters.py
flask-markdown-converter/docs/: cline_task_feb-27-2025_9-02-24-pm.md
flask-markdown-converter/tests/test_preprocessors/: test_calendar.py
flask-markdown-converter/tests/test_templates/: __init__.py
tests/: conftest.py
tests/test_api/: __init__.py  test_convert.py
tests/test_preprocessors/: __init__.py  test_calendar.py
tests/test_templates/: test_calendar_templates.py
